# machine-gun-baby

./: .gitignore  LICENSE
data_gen_from_robosuite/: POSE_FORMAT.md  annotate_videos.py  annotate_videos_complete.py  dataall0001.poses.jsonl  dataall0002.poses.jsonl  pyproject.toml  trained_model.csv  video_translated.csv
data_gen_from_robosuite/data/demos/: out00000.poses.jsonl  out00001.poses.jsonl  out00002.poses.jsonl  out00003.poses.jsonl  out00004.poses.jsonl  out00005.poses.jsonl  out00006.poses.jsonl  out00007.poses.jsonl  out00008.poses.jsonl  out00009.poses.jsonl
data_gen_from_robosuite/robosuite/demos/: demo_compare_positions.py  demo_replay_pickplace_table.py  demo_scripted_pickplace_table.py  demo_scripted_pickplace_table_goal.py  demo_video_replay_csv.py
data_gen_from_robosuite/robosuite/environments/manipulation/: lift.py
diffusiontraining/: .gitignore
diffusiontraining/DiffSynth-Studio/diego/: .gitignore  data_processing.py  infer_1.3b.py  infer_5b.py  infer_5b_full.py  infer_5b_lora.py  train.py  train_full.sh  train_full_multi_gpu.sh  train_lora.sh  train_lora_multi_gpu.sh
diffusiontraining/DiffSynth-Studio/diego/data/examples/videotrain/: metadata.csv
greg/: train.py  train_robot_pose_ddp.py  train_robot_pose_ddp2.py
verifier/: demo.py  verify.py
