[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
extend-exclude = "robosuite/((models/assets)|(controllers/config))"

[project]
name = "workspace"
version = "0.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "tqdm>=4.67.1",
]

[tool.isort]
profile = "black"
line_length = 120
skip = ["__init__.py"]
filter_files = true
py_version = "all"
extend_skip = [
    "robosuite/models/assets",
    "robosuite/controllers/config",
]

[dependency-groups]
dev = [
    "h5py>=3.14.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "mujoco>=3.3.6",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scipy>=1.16.2",
    "termcolor>=3.1.0",
]
